@@ -577,6 +577,8 @@ void edgex_device_populateConfig
     get_nv_config_string (config, "Device/ProfilesDir");
   svc->config.device.sendreadingsonchanged =
     get_nv_config_bool (config, "Device/SendReadingsOnChanged", false);
+  svc->config.device.updatelastconnected =
+    get_nv_config_bool (config, "Device/UpdateLastConnected", false);
 
   svc->config.driverconf = iot_data_alloc_map (IOT_DATA_STRING);
   for (const devsdk_nvpairs *iter = config; iter; iter = iter->next)
@@ -749,6 +751,8 @@ int edgex_device_handler_config
   json_object_set_string (dobj, "ProfilesDir", svc->config.device.profilesdir);
   json_object_set_boolean
     (dobj, "SendReadingsOnChanged", svc->config.device.sendreadingsonchanged);
+  json_object_set_boolean
+    (dobj, "UpdateLastConnected", svc->config.device.updatelastconnected);
   json_object_set_value (obj, "Device", dval);
 
   if (svc->config.driverconf)
